4_k8s/3-media/4-deluge.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: deluge
          image: ghcr.io/linuxserver/deluge:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8112
              protocol: TCP
            - name: torrent
              containerPort: 6881
              protocol: TCP
            - name: torrentudp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: "/config"
            - name: downloads
              mountPath: "/downloads"
      securityContext:
        fsGroup: 1006
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nas-downloads
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: deluge
  labels:
    app: deluge
spec:
  type: NodePort
  selector:
    app: deluge
  ports:
    - name: web
      port: 8112
      protocol: TCP
    - name: torrent
      port: 6881
      protocol: TCP
    - name: torrentudp
      port: 6881
      protocol: UDP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: deluge
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`torrent.ar.olumpos.net`)
      kind: Rule
      services:
        - name: deluge
          port: 8112
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: deluge-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.ar.olumpos.net`)
      kind: Rule
      services:
        - name: deluge
          port: 8112
