4_k8s/3-media/4-jacket.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: jacket
  labels:
    app: jacket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jacket
  template:
    metadata:
      labels:
        app: jacket
    spec:
      containers:
        - name: jacket
          image: lscr.io/linuxserver/jackett:latest
          ports:
            - name: web
              containerPort: 9117
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: "/config"
      securityContext:
        fsGroup: 1006
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jacket-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: jacket
  labels:
    app: jacket
spec:
  type: NodePort
  selector:
    app: jacket
  ports:
    - name: web
      port: 9117
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: jacket
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jacket.ar.olumpos.net`)
      kind: Rule
      services:
        - name: jacket
          port: 9117
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: jacket-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jacket.ar.olumpos.net`)
      kind: Rule
      services:
        - name: jacket
          port: 9117
