4_k8s/3-media/5-torrent-traefik.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: deluge
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`torrent.ar.olumpos.net`)
      kind: Rule
      services:
        - name: deluge
          port: 8112
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: deluge-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.ar.olumpos.net`)
      kind: Rule
      services:
        - name: deluge
          port: 8112
