4_k8s/3-media/6-sonar.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: sonar
  labels:
    app: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonar
        image: ghcr.io/linuxserver/sonarr
        ports:
          - name: web
            containerPort: 8989
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: "/config"
          - name: downloads
            mountPath: "/downloads"
          - name: series
            mountPath: "/series"
      securityContext:
        fsGroup: 1006
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonar-config
      - name: downloads
        persistentVolumeClaim:
          claimName: nas-downloads
      - name: series
        persistentVolumeClaim:
          claimName: nas-series
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: sonar
  labels:
    app: sonar
spec:
  type: NodePort
  selector:
    app: sonar
  ports:
  - name: web
    port: 8989
    protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: sonar
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sonar.ar.olumpos.net`)
    kind: Rule
    services:
    - name: sonar
      port: 8989
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: sonar-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sonar.ar.olumpos.net`)
    kind: Rule
    services:
    - name: sonar
      port: 8989
