4_k8s/3-media/X-komga.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: komga
  labels:
    app: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      containers:
        - name: komga
          image: gotson/komga:latest
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: "/config"
            - name: books
              mountPath: "/books"
            - name: comics
              mountPath: "/comics"
            - name: downloads
              mountPath: "/downloads"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga-config
        - name: books
          persistentVolumeClaim:
            claimName: nas-books
        - name: comics
          persistentVolumeClaim:
            claimName: nas-comics
        - name: downloads
          persistentVolumeClaim:
            claimName: nas-downloads
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: komga
  labels:
    app: komga
spec:
  type: NodePort
  selector:
    app: komga
  ports:
    - name: web
      port: 8080
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: komga
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`komga.ar.olumpos.net`)
      kind: Rule
      services:
        - name: komga
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: komga-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`komga.ar.olumpos.net`)
      kind: Rule
      services:
        - name: komga
          port: 8080
